@@ -1,3 +1,9 @@
+2012-11-25  Julien Bect  <julien.bect@supelec.fr>
+
+	Added a new function to generate OLHSs, following Ye (1998).
+
+	* sampling/stk_sampling_olhs.m: new function
+
 2012-11-21  Julien Bect  <julien.bect@supelec.fr>
 
 	Added default values for some input arguments of stk_is_lhs(),
